WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185745
CRASH in -[WKFullScreenViewController _manager]
https://bugs.webkit.org/show_bug.cgi?id=185745
Summary
CRASH in -[WKFullScreenViewController _manager]
Jer Noble
Reported
2018-05-17 14:30:08 PDT
CRASH in -[WKFullScreenViewController _manager]
Attachments
Patch
(12.01 KB, patch)
2018-05-17 14:33 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-05-17 14:31:53 PDT
<
rdar://problem/39195241
>
Jer Noble
Comment 2
2018-05-17 14:32:15 PDT
<
rdar://problem/39195241
>
Jer Noble
Comment 3
2018-05-17 14:33:06 PDT
Created
attachment 340644
[details]
Patch
WebKit Commit Bot
Comment 4
2018-05-17 15:20:22 PDT
Comment on
attachment 340644
[details]
Patch Clearing flags on attachment: 340644 Committed
r231926
: <
https://trac.webkit.org/changeset/231926
>
WebKit Commit Bot
Comment 5
2018-05-17 15:20:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug